// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments renders Comments with props 1`] = `
<div
  className="comments-header"
>
  <CommentsHeader
    amountComments={112499}
  />
  <AddComment />
  <Comment />
  <Comment />
  <Comment />
</div>
`;

exports[`Comments renders Comments without props 1`] = `
<div
  className="comments-header"
>
  <CommentsHeader />
  <AddComment />
  <Comment />
  <Comment />
  <Comment />
</div>
`;
